kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service
spec:
  selector:
    matchLabels:
      app: employee-service
  replicas: 3 # tells deployment to run 3 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: employee-service
    spec:
      containers:
        - name: employee-service
          image: wpfeiffe/employee-service
          ports:
            - containerPort: 8080
