kubernetes/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: employee-service
spec:
  selector:
    app: employee-service
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30001
  type: NodePort
