kubernetes/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: employee-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.allow-http: "true"
spec:
  backend:
    serviceName: employee-service
    servicePort: 8080
